<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="demo.tdd.com.mytddapp.MainActivity">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edt_height"
        android:layout_margin="@dimen/app_margin_normal"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edt_height"
        android:layout_margin="@dimen/app_margin_normal"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btSignIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edt_height"
        android:layout_margin="@dimen/app_margin_normal"
        android:text="@string/btn_sign_in" />

</LinearLayout>
